fixed layout issues

--- a/CharacterBuilder/src/app/character-builder/character-builder.component.css
+++ b/CharacterBuilder/src/app/character-builder/character-builder.component.css
@@ -3,6 +3,9 @@
   flex-direction: row;
   gap: 3rem;
 }
+button {
+  margin-top: 1rem;
+}
 
 form {
   display: flex;
