--- a/CharacterBuilder/src/app/randomizer/randomizer.component.css
+++ b/CharacterBuilder/src/app/randomizer/randomizer.component.css
@@ -1,5 +1,6 @@
 
 .buttons {
+  margin-top: 1rem;
   display: flex;
   flex-direction: row;
   gap: 1rem;
