--- a/CharacterBuilder/src/styles.css
+++ b/CharacterBuilder/src/styles.css
@@ -15,13 +15,14 @@ app-root {
 
 button {
   padding: 0.5rem;
-  margin-top: 0.5rem;
+  height: 2rem;
   margin-right: 0.5rem;
   background-color: cadetblue;
   color: white;
   border-radius: 0.5rem;
   border-color:darkcyan;
   border-style: solid;
+  align-self: center;
 }
 
 button:hover {
